@@ -19,7 +19,9 @@ open Evd
 
 type 'a and_short_name = 'a * identifier located option
 
-type 'a or_by_notation = AN of 'a | ByNotation of loc * string
+type 'a or_by_notation =
+  | AN of 'a
+  | ByNotation of loc * string * Notation.delimiters option
 
 (* In globalize tactics, we need to keep the initial [constr_expr] to recompute*)
 (* in the environment by the effective calls to Intro, Inversion, etc *)
